--- a/itviec/package.json
+++ b/itviec/package.json
@@ -17,7 +17,9 @@
     "@mui/material": "^5.16.7",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.7",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "itviec": "file:",
     "jose": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "next": "14.2.4",
