--- a/itviec/package.json
+++ b/itviec/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.21.1",
+    "@ant-design/icons": "^5.4.0",
+    "@ant-design/nextjs-registry": "^1.0.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@iconify/react": "^5.0.2",
@@ -17,11 +20,13 @@
     "@mui/material": "^5.16.7",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.7",
+    "antd": "^5.20.6",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "itviec": "file:",
     "jose": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "notistack": "^3.0.1",
     "react": "^18",
@@ -34,6 +39,7 @@
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/lodash": "^4.17.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
