--- a/itviec/package.json
+++ b/itviec/package.json
@@ -23,17 +23,22 @@
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "i18next": "^23.15.2",
     "itviec": "file:",
     "jose": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "next": "14.2.4",
+    "next-i18next": "^15.3.1",
+    "next-intl": "^3.21.1",
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "react-i18next": "^15.0.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "swiper": "^11.1.14",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
@@ -43,8 +48,9 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "^14.2.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
