add feature chat

--- a/itviec/.env
+++ b/itviec/.env
@@ -5,4 +5,5 @@ SECRET_KEY=NTASPORT
 
 //endpoint
 NEXT_SERVER_API_URL=http://localhost:3000
-NEST_SERVER_API_URL=http://localhost:3001
+NEXT_PUBLIC_BACKEND=http://localhost:3001
+NEXT_PUBLIC_SOCKET=http://localhost:3002
