--- a/itviec/package.json
+++ b/itviec/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.16.7",
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
+    "@react-google-maps/api": "^2.20.3",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.7",
     "antd": "^5.20.6",
@@ -28,7 +29,7 @@
     "jose": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "next": "14.2.4",
+    "next": "^14.2.4",
     "next-i18next": "^15.3.1",
     "next-intl": "^3.21.1",
     "notistack": "^3.0.1",
@@ -38,7 +39,9 @@
     "react-i18next": "^15.0.2",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2",
+    "socket.io-client": "^4.8.0",
     "swiper": "^11.1.14",
+    "tailwind-merge": "^2.5.3",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
   },
