--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/mongoose": "^10.0.6",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.3",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -36,6 +37,8 @@
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
