--- a/itviec/package.json
+++ b/itviec/package.json
@@ -21,6 +21,7 @@
     "@react-google-maps/api": "^2.20.3",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.59.20",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
@@ -29,6 +30,7 @@
     "jose": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "moment": "^2.30.1",
     "next": "^14.2.4",
     "next-i18next": "^15.3.1",
     "next-intl": "^3.21.1",
@@ -39,6 +41,7 @@
     "react-hook-form": "^7.53.0",
     "react-i18next": "^15.0.2",
     "react-icons": "^5.2.1",
+    "react-query": "^3.39.3",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "socket.io-client": "^4.8.0",
