--- a/server/package.json
+++ b/server/package.json
@@ -22,10 +22,12 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.651.1",
+    "@elastic/elasticsearch": "^8.16.2",
     "@nestjs/axios": "^3.1.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/elasticsearch": "^8.1.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/mongoose": "^10.0.6",
@@ -38,7 +40,7 @@
     "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.4.4",
+    "mongoose": "^8.8.3",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
