--- a/itviec/package.json
+++ b/itviec/package.json
@@ -25,10 +25,12 @@
     "antd": "^5.20.6",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.15.2",
     "itviec": "file:",
     "jose": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "^14.2.4",
