--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,9 @@
     "@nestjs/mongoose": "^10.0.6",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.4.3",
+    "@nestjs/platform-socket.io": "^10.4.15",
+    "@nestjs/websockets": "^10.4.15",
+    "@socket.io/redis-adapter": "^8.3.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
@@ -41,6 +44,7 @@
     "cookie-parser": "^1.4.7",
     "crypto-js": "^4.2.0",
     "handlebars": "4.7.7",
+    "ioredis": "^5.4.1",
     "moment": "^2.30.1",
     "mongoose": "^8.8.3",
     "ms": "^2.1.3",
@@ -51,9 +55,11 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
     "qs": "^6.13.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "server": "file:"
+    "server": "file:",
+    "socket.io-redis": "^6.1.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
