--- a/itviec/package.json
+++ b/itviec/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^5.59.20",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "html2canvas": "^1.4.1",
     "i18next": "^23.15.2",
@@ -37,6 +38,7 @@
     "next-i18next": "^15.3.1",
     "next-intl": "^3.21.1",
     "notistack": "^3.0.1",
+    "query-string": "^9.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
