--- a/package.json
+++ b/package.json
@@ -24,17 +24,21 @@
     "@tanstack/react-query": "^5.59.20",
     "antd": "^5.20.6",
     "axios": "^1.7.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
+    "html2canvas": "^1.4.1",
     "i18next": "^23.15.2",
     "itviec": "file:",
     "jose": "^5.8.0",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "next": "^14.2.4",
     "next-i18next": "^15.3.1",
     "next-intl": "^3.21.1",
     "notistack": "^3.0.1",
+    "query-string": "^9.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
@@ -46,6 +50,7 @@
     "react-redux": "^9.1.2",
     "socket.io-client": "^4.8.0",
     "swiper": "^11.1.14",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.3",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
