--- a/itviec/package.json
+++ b/itviec/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+  
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -33,11 +34,14 @@
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^2.5.2",
     "lodash": "^4.17.21",
+    "marked": "^15.0.11",
     "moment": "^2.30.1",
     "next": "^14.2.4",
     "next-i18next": "^15.3.1",
     "next-intl": "^3.21.1",
     "notistack": "^3.0.1",
+    "openai": "^3.3.0",
+    "pdf-parse": "^1.1.1",
     "query-string": "^9.1.1",
     "react": "^18",
     "react-dom": "^18",
@@ -52,13 +56,13 @@
     "swiper": "^11.1.14",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.5.3",
-    "zod": "^3.23.8",
-    "zustand": "^4.5.5"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.6",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "babel-eslint": "^10.1.0",
