--- a/server/package.json
+++ b/server/package.json
@@ -51,9 +51,11 @@
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "6.9.3",
+    "openai": "^4.98.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
+    "pdf-parse": "^1.1.1",
     "qs": "^6.13.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.0",
