--- a/itviec/package.json
+++ b/itviec/package.json
@@ -19,6 +19,8 @@
     "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.7",
     "@react-google-maps/api": "^2.20.3",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-query": "^5.59.20",
