fix docker-compose env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "6000:3000" # Public cổng 6000 của VPS ra cổng 3000 container FE
-    environment:
-      - env_file: ./itviec/.env
+    env_file:
+      - ./itviec/.env
 
   backend:
     build:
@@ -16,8 +16,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "6001:3001" # Có thể public cổng 6001 của VPS ra cổng 3001 container BE
-    environment:
-      - env_file: ./server/.env
+    env_file:
+      - ./server/.env
     mem_limit: 512m
     cpus: 0.5
 
@@ -27,8 +27,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "6002:3009" # Public cổng 6002 của VPS ra cổng 3009 container socket
-    environment:
-      - env_file: ./socket-gateway/.env
+    env_file:
+      - ./socket-gateway/.env
     depends_on:
       - redis
     mem_limit: 256m
