--- a/itviec/Dockerfile
+++ b/itviec/Dockerfile
@@ -7,7 +7,7 @@ WORKDIR /app
 COPY package.json ./
 
 # Install dependencies
-RUN npm install
+RUN npm install --legacy-peer-deps
 
 # Copy the rest of the project
 COPY . .
